test/runtime/fail/fn/missing_name.hy

// expect error: Expected identifier after `fn`, found `(`

fn (hello, there) {
	// ...
}
